kubernetes/review/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: review-service
  name: review-service
spec:
  selector:
    app: review-service
  ports:
  - port: 5000
    targetPort: 5000
  type: NodePort
