kubernetes/review/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: review-ingress
  namespace: review-service
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/no-cache: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/reviews
        pathType: Prefix
        backend:
          service:
            name: review-service
            port:
              number: 5000
