kubernetes/review/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: review-service
  name: review-network-policy
spec:
  podSelector:
    matchLabels:
      app: review-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - {}
